Set up files needed for universal layout functionality.
[#102089556]

Signed-off-by: Elena Sharma <esharma@pivotal.io>

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,8 +14,9 @@
     <%=vars.book_title_short%>
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%= stylesheet_link_tag 'master', :media => 'screen,print' %>
+  <%= stylesheet_link_tag 'master', :media => 'screen, print' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
+  <%= stylesheet_link_tag 'book-styles', :media => 'screen, print' %>
   <link href='/images/favicon.ico' rel='shortcut icon'>
   <%= javascript_include_tag  "all" %>
 
