--- a/source/sass/master.scss
+++ b/source/sass/master.scss
@@ -22,6 +22,8 @@
 @import "partials/_footer.scss";
 @import "partials/_sidenav.scss";
 
+// Book-specific overrides
+@import "partials/_book-vars.scss";
 
 // ~LAYOUT
 // ===================================================
