Remove book-specific content from layout.erb.
[#102089556]

Signed-off-by: Christa Hartsock <chartsock@pivotal.io>

--- a/source/javascripts/page_initializers/documentation.js.erb
+++ b/source/javascripts/page_initializers/documentation.js.erb
@@ -23,12 +23,11 @@ $(function () {
 
 //Global Google Search
 (function() {
-    var cx = '012029519579280034868:3hzywhss5ik';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
     gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx;
+        '//www.google.com/cse/cse.js?cx=' + '<%= vars.cse_id %>';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(gcse, s);
 })();
