--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -66,98 +66,7 @@
     })();
   </script>
 
-  <%# @TODO: Replace with better if(homepage) check %>
-  <% if current_page.data.title %>
-    <header class="header header-layout">
-      <h1 class="logo">
-        <a href="/"><%= vars.book_title || 'Default Book Title' %></a>
-      </h1>
-		<%# @TODO: Replace with dynamic versioning %>
-	      <% if page_classes.match(/^pivotalcf /) %>
-        <div class="header-dropdown">
-          <a class="header-dropdown-link" >
-            v1.5.0.0
-          </a>
-          <div class="header-dropdown-content">
-            <ul>
-			  <li><a href="/archives/pcf-docs-1.4.pdf">v1.4.0.0</a></li>
-			  <li><a href="/archives/pcf-docs-1.3.pdf">v1.3.0.0</a></li>
-              <li><a href="/archives/pcf-docs-1.2.pdf">v1.2.0.0</a></li>
-            </ul>
-          </div>
-        </div>
-      <% end %>
-		 <% if page_classes.match(/^p-mysql /) %>
-      <div class="header-dropdown">
-        <a class="header-dropdown-link" >
-          v1.5.0.0
-        </a>
-        <div class="header-dropdown-content">
-          <ul>
-			  <li><a href="/archives/p-mysql/mysql-docs-1.4.pdf">v1.4.0.0</a></li>
-          </ul>
-        </div>
-      </div>
-    <% end %>
-		<% if page_classes.match(/^pivotalhd-ds /) %>
-      <div class="header-dropdown">
-        <a class="header-dropdown-link" >
-          v1.3.2.0
-        </a>
-        <div class="header-dropdown-content">
-          <ul>
-            <li><a href="/archives/phd-data-service-v1.2.pdf">v1.2.0.0</a></li>
-          </ul>
-        </div>
-      </div>
-    <% end %>
-      <div class="header-links js-bar-links">
-        <div class="btn-menu" data-behavior="MenuMobile"></div>
-		 <div class="header-item">
-	          <a href="<%=vars.product_url%>">Back to Product Page</a>
-	        </div>
-        <div class="header-item">
-          <a href="<%=vars.support_url%>" target="_blank">Support</a>
-        </div>
-        <div class="header-item searchbar js-searchbar">
-          <a class="search-icon" data-behavior="Search"></a>
-          <div class="search-input">
-            <!-- Google CSE Search Box -->
-            <div class="search-input-inner" id="docs-search">
-                <gcse:search></gcse:search>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-  <% else %>
-    <header class="header-home">
-      <div class="home-links js-bar-links">
-        <div class="btn-menu" data-behavior="MenuMobile"></div>
-		<div class="header-item">
-          <a href="https://network.pivotal.io/products" target="_blank">Back to Pivotal Network</a>
-        </div>
-        <div class="header-item">
-          <a href="<%=vars.support_url%>" target="_blank">Need Support?</a>
-        </div>
-        <div class="header-item searchbar js-searchbar">
-          <a class="search-icon" data-behavior="Search"></a>
-          <div class="search-input">
-            <!-- Google CSE Search Box -->
-            <div class="search-input-inner" id="docs-search">
-                <gcse:search></gcse:search>
-            </div>
-          </div>
-        </div>
-      </div>
-      <h1 class="title-flashy">
-       <img src="<%=vars.title_image%>"> <%=vars.title%>
-      </h1>
-      <h2 class="title-intro">
-        <%=vars.hero_text%>
-      </h2>
-    </header>
-  <% end %>
+  <%= partial 'book-vars' %>
 
   <div class="container">
 
@@ -212,12 +121,7 @@
 
 <div class="container">
   <footer class="site-footer-links">
-    <div class="copyright">
-      <a href='/'>Pivotal Documentation</a>
-      &copy; <%= Time.now.year %> <a href='http://pivotal.io'>Pivotal Software</a>, Inc. All Rights Reserved.
-  </div>
-  <div class="support">
-    Need help? <a href="<%=vars.support_url%>" target="_blank">Visit Support</a>
+    <%= partial 'book-footer' %>
   </footer>
 </div><!--end of container-->
 
