--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -66,7 +66,7 @@
     })();
   </script>
 
-  <%= partial 'book-vars' %>
+  <%= partial 'layouts/book-header' %>
 
   <div class="container">
 
@@ -121,7 +121,7 @@
 
 <div class="container">
   <footer class="site-footer-links">
-    <%= partial 'book-footer' %>
+    <%= partial 'layouts/book-footer' %>
   </footer>
 </div><!--end of container-->
 
