--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,20 +11,20 @@
     <% if data.page.title %>
       <%= data.page.title %> |
     <% end %>
-    <%=vars.book_title_short%>
+    <%= vars.book_title_short %>
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag 'master', :media => 'screen, print' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
   <%= stylesheet_link_tag 'book-styles', :media => 'screen, print' %>
   <link href='/images/favicon.ico' rel='shortcut icon'>
-  <%= javascript_include_tag  "all" %>
+  <%= javascript_include_tag "all" %>
 
   <script type="text/javascript">
     if (window.location.host === '<%= production_host %>') {
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-39702075-1']);
-      _gaq.push(['_setDomainName', 'pivotal.io']);
+      _gaq.push(['_setAccount', '<%= vars.ga_account_id %>']);
+      _gaq.push(['_setDomainName', '<%= vars.domain_name %>']);
       _gaq.push(['_trackPageview']);
 
       (function() {
@@ -39,42 +39,118 @@
 <body class="<%= page_classes %> <%= yield_for_subnav.empty? ? '' : 'has-subnav' %>">
 
 <div class="viewport">
-<div class='wrap'>
-  <script src="//use.typekit.net/clb0qji.js" type="text/javascript"></script>
-  <script type="text/javascript">
+  <div class='wrap'>
+    <script src="//use.typekit.net/clb0qji.js" type="text/javascript"></script>
+    <script type="text/javascript">
       try {
-          Typekit.load();
+        Typekit.load();
       } catch (e) {
       }
-  </script>
-  <script type="text/javascript">
-      document.domain = "pivotal.io";
-  </script>
+    </script>
+    <script type="text/javascript">
+      document.domain = "<%= vars.domain_name %>";
+    </script>
 
-  <script type="text/javascript">
-    WebFontConfig = {
-      google: { families: [ 'Source+Sans+Pro:300italic,400italic,300,400,600:latin' ] }
-    };
-    (function() {
-      var wf = document.createElement('script');
-      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-      wf.type = 'text/javascript';
-      wf.async = 'true';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(wf, s);
-    })();
-  </script>
+    <script type="text/javascript">
+      WebFontConfig = {
+        google: {families: ['Source+Sans+Pro:300italic,400italic,300,400,600:latin']}
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })();
+    </script>
 
-  <%= partial 'layouts/book-header' %>
+    <%# @TODO: Replace with better if(homepage) check %>
+    <% if current_page.data.title %>
+      <header class="header header-layout">
+        <h1 class="logo">
+          <a href="/"><%= vars.book_title || 'Default Book Title' %></a>
+        </h1>
+        <%# @TODO: Replace with dynamic versioning %>
+        <% if page_classes.match(/^pivotalcf /) %>
+          <div class="header-dropdown">
+            <a class="header-dropdown-link">
+              v1.5.0.0
+            </a>
 
-  <div class="container">
+            <div class="header-dropdown-content">
+              <ul>
+                <li><a href="/archives/pcf-docs-1.5.pdf">v1.5.0.0</a></li>
+                <li><a href="/archives/pcf-docs-1.4.pdf">v1.4.0.0</a></li>
+                <li><a href="/archives/pcf-docs-1.3.pdf">v1.3.0.0</a></li>
+                <li><a href="/archives/pcf-docs-1.2.pdf">v1.2.0.0</a></li>
+              </ul>
+            </div>
+          </div>
+        <% end %>
+        <% if page_classes.match(/^p-mysql /) %>
+          <div class="header-dropdown">
+            <a class="header-dropdown-link">
+              v1.5.0.0
+            </a>
+
+            <div class="header-dropdown-content">
+              <ul>
+                <li><a href="/archives/p-mysql/mysql-docs-1.4.pdf">v1.4.0.0</a></li>
+              </ul>
+            </div>
+          </div>
+        <% end %>
+        <% if page_classes.match(/^pivotalhd-ds /) %>
+          <div class="header-dropdown">
+            <a class="header-dropdown-link">
+              v1.3.2.0
+            </a>
+
+            <div class="header-dropdown-content">
+              <ul>
+                <li><a href="/archives/phd-data-service-v1.2.pdf">v1.2.0.0</a></li>
+              </ul>
+            </div>
+          </div>
+        <% end %>
+        <div class="header-links js-bar-links">
+          <div class="btn-menu" data-behavior="MenuMobile"></div>
+          <%= vars.product_link %>
+          <div class="header-item">
+            <%= vars.support_link %>
+          </div>
+          <%= partial 'layouts/book-search' %>
+        </div>
+      </header>
+    <% else %>
+      <header class="header-home">
+        <div class="home-links js-bar-links">
+          <div class="btn-menu" data-behavior="MenuMobile"></div>
+          <%= vars.product_link %>
+          <div class="header-item">
+            <%= vars.support_call_to_action %>
+          </div>
+          <%= partial 'layouts/book-search' %>
+        </div>
+        <h1 class="title-flashy">
+          <%= partial 'layouts/book-title' %>
+        </h1>
+
+        <h2 class="title-intro">
+          <%= vars.hero_text %>
+        </h2>
+      </header>
+    <% end %>
+
+    <div class="container">
 
       <%= yield_for_subnav %>
 
       <main class="content content-layout" id="js-content" role="main">
         <a id="top"></a>
-        <% if current_page.data.title %>
+        <% if current_page.data.title && !current_page.data.dita %>
           <h1 class="title-container">
             <%= current_page.data.title %>
           </h1>
