Add default search box to partial.
[#103635678]

Signed-off-by: Christa Hartsock <chartsock@pivotal.io>

--- a/source/layouts/_book-search.erb
+++ b/source/layouts/_book-search.erb
@@ -1,2 +1,11 @@
 <!--Default search-->
 <!--If book needs something different, add a book-search partial to the book's layouts folder-->
+<div class="header-item searchbar js-searchbar">
+  <a class="search-icon" data-behavior="Search"></a>
+  <div class="search-input">
+    <!-- Google CSE Search Box -->
+    <div class="search-input-inner" id="docs-search">
+      <gcse:search></gcse:search>
+    </div>
+  </div>
+</div>
