Namespace table borders and hover for style fixes
Signed-off-by: Christa Hartsock <chartsock@pivotal.io>

--- a/source/stylesheets/partials/_default.scss
+++ b/source/stylesheets/partials/_default.scss
@@ -178,10 +178,16 @@ th {
 tr {
   color: #686868;
 }
-tr:hover {
+
+.content td, .content th, .content tr {
+  border: solid 1px grey;
+}
+
+.content tr:hover {
   background-color: #fdfdfd;
   color: #333;
 }
+
 caption {
   @extend %h-m;
   padding: 0.5em;
