Update README with info on base book values
Also add section markers in _vars.scss for base values and vars

[#105487652]

Signed-off-by: Elena Sharma <esharma@pivotal.io>

--- a/source/stylesheets/partials/_vars.scss
+++ b/source/stylesheets/partials/_vars.scss
@@ -2,7 +2,7 @@
  * FILE: _vars.scss
 ======================================================================== */
 
-// ~FONTS
+// ~BEGIN BASE VALUES
 // ===================================================
 $font-primary: 'Source Sans Pro', sans-serif;
 $font-size-xxl: 2.441em;
@@ -28,9 +28,11 @@ $teal2: #00a79d;
 // Book-specific overrides
 @import "book-base-values.scss";
 
-// ~COLORS
+// ~BEGIN VARS
 // ===================================================
 
+// ~COLORS
+// ===================================================
 /*doc
 ---
 title: Colors
