--- a/source/subnavs/_dita_subnav_template.erb
+++ b/source/subnavs/_dita_subnav_template.erb
@@ -2,7 +2,7 @@
   <a class="sidenav-title">
     Doc Index
   </a>
-  <div class="deep-nav nav-content" >
+  <div class="nav-content deepnav-content" >
   </div>
 </div>
 <!--end of sub-nav-->
