Adding 1.6 pdf to drop down

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -82,6 +82,7 @@
 
             <div class="header-dropdown-content">
               <ul>
+				<li><a href="/archives/pcf-docs-1.6.pdf">v1.6.0.0</a></li>
                 <li><a href="/archives/pcf-docs-1.5.pdf">v1.5.0.0</a></li>
                 <li><a href="/archives/pcf-docs-1.4.pdf">v1.4.0.0</a></li>
                 <li><a href="/archives/pcf-docs-1.3.pdf">v1.3.0.0</a></li>
