Reindent topics with submenus for deepnav
This aligns topics at the same level regardless of whether they have a
submenu.

[Fixes #106797792]

Signed-off-by: Elena Sharma <esharma@pivotal.io>

--- a/source/stylesheets/partials/_sidenav.scss
+++ b/source/stylesheets/partials/_sidenav.scss
@@ -462,6 +462,7 @@ Add <code>.nav-container</code> to get fixed positioning.
   margin-left: 1em;
   float: none;
   width: inherit;
+  padding-left: 1em;
 }
 .deepnav-content .hasSubMenuOpened {
   @extend .fa-angle-down;
