Update wording in feedback partial comments header
[Finishes #68598534]

Signed-off-by: Christa Hartsock <chartsock@pivotal.io>

--- a/source/layouts/_feedback.erb
+++ b/source/layouts/_feedback.erb
@@ -12,7 +12,7 @@
       </div>
     </fieldset>
     <fieldset>
-      <legend>Comments</legend>
+      <legend>Suggestions for improvement?</legend>
       <textarea name="comments" placeholder="I would like this topic to..."></textarea>
     </fieldset>
     <input type="hidden" name="date" />
