add '&reg;' to 'Pivotal Cloud Foundry'

--- a/source/subnavs/pivotal_cloudbees_service_subnav.erb
+++ b/source/subnavs/pivotal_cloudbees_service_subnav.erb
@@ -17,13 +17,13 @@
     <b>Guides:</b>
     <ul>
       <li class="first expanded js-maintopic">
-        <a href="/cloudbees/continuous-delivery-java.html">Guide to Testing and Deploying a Java Application to Pivotal Cloud Foundry</a>
+        <a href="/cloudbees/continuous-delivery-java.html">Guide to Testing and Deploying a Java Application to Pivotal Cloud Foundry&reg;</a>
       </li>
       <li class="first expanded js-maintopic">
-        <a href="/cloudbees/continuous-delivery-ruby.html">Guide to Testing and Deploying a Ruby Application to Pivotal Cloud Foundry</a>
+        <a href="/cloudbees/continuous-delivery-ruby.html">Guide to Testing and Deploying a Ruby Application to Pivotal Cloud Foundry&reg;</a>
       </li>
       <li class="first expanded js-maintopic">
-        <a href="/cloudbees/security.html">Security-Integrating CloudBees Jenkins Enterprise with Pivotal Cloud Foundry</a>
+        <a href="/cloudbees/security.html">Security-Integrating CloudBees Jenkins Enterprise with Pivotal Cloud Foundry&reg;</a>
       </li>
     </ul>
   </div>
