--- a/source/subnavs/pivotal_redis_service_subnav.erb
+++ b/source/subnavs/pivotal_redis_service_subnav.erb
@@ -5,7 +5,7 @@
   <div class="nav-content">
     <ul class="menu">
       <li class="first expanded js-maintopic">
-        <a id='home-nav-link' href="/redis/index.html">Redis for Pivotal Cloud Foundry</a>
+        <a id='home-nav-link' href="/redis/index.html">Redis for Pivotal Cloud Foundry&reg;</a>
       </li>
       <li class="first expanded js-maintopic">
         <a href="/redis/backups.html">Backup & Restore</a>
