--- a/source/layouts/_feedback.erb
+++ b/source/layouts/_feedback.erb
@@ -1,7 +1,8 @@
 <div id="feedback">
+  <hr>
   <form data-behavior="SubmitFeedback">
-    <fieldset>
-      <legend>Was this page helpful?</legend>
+    <fieldset id="feedback-helpful">
+      <legend>Was this topic helpful?</legend>
       <div class="feedback-option">
         <input type="radio" name="helpful" value="true" id="is-helpful" required />
         <label for="is-helpful">Yes</label>
@@ -11,14 +12,15 @@
         <label for="is-not-helpful">No</label>
       </div>
     </fieldset>
-    <fieldset>
-      <legend>Suggestions for improvement?</legend>
+    <fieldset id="feedback-comments">
+      <legend>Suggestions for improvement</legend>
       <textarea name="comments" placeholder="I would like this topic to..."></textarea>
     </fieldset>
     <input type="hidden" name="date" />
     <input type="hidden" name="page_url" />
     <div id="errors">
     </div>
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Submit" id="feedback-submit"/>
   </form>
+  <hr>
 </div>
