--- a/source/stylesheets/partials/_footer.scss
+++ b/source/stylesheets/partials/_footer.scss
@@ -23,18 +23,34 @@
 }
 
 #feedback {
+  #feedback-comments {
+    margin-top: 1em;
+    width: 50%;
+  }
+  #feedback-helpful {
+    border: none;
+    margin-top: 1em;
+  }
+  .feedback-option {
+    float: left;
+    margin-left: 2em;
+    margin-top: 0.5em;
+    width: 22%;
+  }
   form fieldset {
-    width: 49.5%;
+    width: 11.5em;
     float: left;
   }
   textarea {
     width: 100%;
   }
-  .feedback-option {
-    float: left;
-    width: 50%
-  }
   input[type='submit'] {
+    background-color: transparentize($color-accent-bright, 0.8);
+    bottom: -16.5em;
     margin-top: 1em;
+    padding: 1em;
+    position: absolute;
+    right: 13em;
+    width: 10%;
   }
 }
