add Crazy Egg script to layout.erb

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -34,6 +34,14 @@
       })();
     }
   </script>
+
+  <!-- CrazyEgg Tracking Script -->
+  <script type="text/javascript">
+    setTimeout(function(){var a=document.createElement("script");
+    var b=document.getElementsByTagName("script")[0];
+    a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0020/8294.js?"+Math.floor(new Date().getTime()/3600000);
+    a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+  </script>
 </head>
 
 <body class="<%= page_classes %> <%= yield_for_subnav.empty? ? '' : 'has-subnav' %>">
