Style repo link
[Finishes #107959892]

Signed-off-by: Elena Sharma <esharma@pivotal.io>

--- a/source/stylesheets/partials/_footer.scss
+++ b/source/stylesheets/partials/_footer.scss
@@ -53,3 +53,11 @@
     width: 8em;
   }
 }
+
+#repo-link {
+  border-bottom: solid 1px #eceae9;
+  border-top: solid 1px #eceae9;
+  text-align: center;
+  padding: 1em 0;
+  font-weight: bold;
+}
