--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -35,6 +35,16 @@
     }
   </script>
 
+  <script type="text/javascript">
+    var blackList = ['acceptance'];
+
+    blackList.forEach(function(blackListedEnv){
+      if (document.URL.indexOf(blackListedEnv) > -1 && blackListedEnv != "") {
+        $('head').append('<meta name="hashtag" content="PivotalMoment">');
+      }
+    });
+  </script>
+
   <!-- CrazyEgg Tracking Script -->
   <script type="text/javascript">
     setTimeout(function(){var a=document.createElement("script");
