[#110990386] Adding github link in layout

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -196,6 +196,7 @@
           <a href="#top" title="back to top"></a>
         </div>
         <%= yield %>
+        <%= render_repo_link(include_environments: ['staging', 'acceptance', 'cloudfoundry', 'localhost']) %>
       </main><!--end of content-->
 
   </div><!-- end of container -->
