Add function to conditionally display repo link
[#110990386]

--- a/source/javascripts/page_initializers/documentation.js.erb
+++ b/source/javascripts/page_initializers/documentation.js.erb
@@ -2,6 +2,21 @@ $(document).ready(function() {
   Elemental.load(document);
 });
 
+$(function(){
+
+  var repoLink = $('#repo-link');
+  var whiteList = repoLink[0].dataset.whitelist.split(" ");
+  var display = 'none';
+
+  whiteList.forEach(function(whiteListedEnv){
+    if (document.URL.indexOf(whiteListedEnv) > -1 && whiteListedEnv != "") {
+      display = 'block';
+    }
+  });
+
+  repoLink.css("display", display);
+});
+
 $(function () {
 
 	if (document.location.pathname.indexOf('/pivotalax/') > -1 ||
