replace docs-p1-packaging repo with docs-partners [#106106732]

--- a/source/Gemfile-docker/creating-account.html.md.erb
+++ b/source/Gemfile-docker/creating-account.html.md.erb
@@ -777,12 +777,12 @@ Services (landing)
         <div class="menu-content js-menu-content" aria-hidden="true">
           <ul>
             <li class="menu-link">
-              <a href="/pivotalcf/packaging/">
+              <a href="/pivotalcf/partners/">
                 Packaging Pivotal One Products
               </a>
             </li>
             <li class="menu-link">
-              <a href="/pivotalcf/packaging/lifecycle-errands.html">
+              <a href="/pivotalcf/partners/lifecycle-errands.html">
                 Understanding Lifecycle Errands
               </a>
             </li>
