Updates to new subnav

--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -13,12 +13,12 @@
         <div class="menu-title js-menu-title">Push Notification Service</div>
         <div class="menu-content js-menu-content">
           <ul>
-            <li class="menu-link"><a href="/mobile/push/">Overview</a></li>
-            <li class="menu-link"><a href="/mobile/push/installation.html">Installation</a></li>
-            <li class="menu-link"><a href="/mobile/push/dashboard-user-guide.html">Dashboard User Guide</a></li>
-            <li class="menu-link"><a href="/mobile/push/development-guide.html">Development Guide</a></li>
-            <li class="menu-link"><a href="/mobile/push/devops.html">DevOps Guide</a></li>
-            <li class="menu-link"><a href="/mobile/push/release-notes.html">Release Notes</a></li>
+            <li class="menu-link"><a href="/push/">Overview</a></li>
+            <li class="menu-link"><a href="/push/installation.html">Installation</a></li>
+            <li class="menu-link"><a href="/push/dashboard-user-guide.html">Dashboard User Guide</a></li>
+            <li class="menu-link"><a href="/push/development-guide.html">Development Guide</a></li>
+            <li class="menu-link"><a href="/push/devops.html">DevOps Guide</a></li>
+            <li class="menu-link"><a href="/push/release-notes.html">Release Notes</a></li>
           </ul>
         </div>
       </li>
