Edits to subnav

--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -1,14 +1,6 @@
-<div id="sub-nav" class="js-sidenav nav-container"><a class="sidenav-title">Doc Index</a>
+<div id="sub-nav" class="js-sidenav collapsible nav-container" role="navigation" data-behavior="Collapsible"><a class="sidenav-title" data-behavior="SubMenuMobile">Doc Index</a>
   <div class="nav-content">
     <ul class="menu">
-      <li class="menu-item js-menu-item">
-        <div class="menu-title js-menu-title">Home</div>
-        <div class="menu-content js-menu-content">
-          <ul>
-            <li class="menu-link"><a href="/push/index.html">Push Notification Service Docs Home</a></li>
-          </ul>
-        </div>
-      </li>
       <li class="menu-item js-menu-item">
         <div class="menu-title js-menu-title">Push Notification Service</div>
         <div class="menu-content js-menu-content">
