--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -3,7 +3,7 @@
     <ul class="menu">
       <li class="menu-item js-menu-item">
         <div class="menu-title js-menu-title">Push Notification Service</div>
-        <div class="menu-content js-menu-content">
+        <div class="menu-content js-menu-content" aria-hidden="true">
           <ul>
             <li class="menu-link"><a href="/push/">Overview</a></li>
             <li class="menu-link"><a href="/push/installation.html">Installation</a></li>
