Adding new subnav and editing existing

--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -1,9 +1,9 @@
-<div id="sub-nav" class="js-sidenav collapsible nav-container" role="navigation" data-behavior="Collapsible"><a class="sidenav-title" data-behavior="SubMenuMobile">Doc Index</a>
+<div id="sub-nav" class="js-sidenav nav-container" role="navigation"><a class="sidenav-title">Doc Index</a>
   <div class="nav-content">
     <ul class="menu">
       <li class="menu-item js-menu-item">
         <div class="menu-title js-menu-title">Push Notification Service</div>
-        <div class="menu-content js-menu-content" aria-hidden="true">
+        <div class="menu-content js-menu-content">
           <ul>
             <li class="menu-link"><a href="/push/">Overview</a></li>
             <li class="menu-link"><a href="/push/installation.html">Installation</a></li>
