--- a/source/subnavs/pivotal_edge_mysql_service_subnav.erb
+++ b/source/subnavs/pivotal_edge_mysql_service_subnav.erb
@@ -53,17 +53,17 @@
         <div class="menu-content js-menu-content" aria-hidden="true">
           <ul>
             <li class="menu-link">
-              <a href="/pivotalcf/p-mysql/cluster-state.html">
+              <a href="/p-mysql/cluster-state.html">
                 Determining Cluster State
               </a>
             </li>
             <li class="menu-link">
-              <a href="/pivotalcf/p-mysql/bootstrapping.html">
+              <a href="/p-mysql/bootstrapping.html">
                 Bootstrapping a Cluster
               </a>
             </li>
             <li class="menu-link">
-              <a href="/pivotalcf/p-mysql/backup.html">
+              <a href="/p-mysql/backup.html">
                 Backing up MySQL
               </a>
             </li>
