update p-mysql header dropdown

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -117,7 +117,9 @@
 
             <div class="header-dropdown-content">
               <ul>
-                <li><a href="/archives/p-mysql/mysql-docs-1.4.pdf">v1.4</a></li>
+                <li><a href="/p-mysql/mysql-docs-1.6.pdf">v1.6</a></li>
+                <li><a href="/p-mysql/mysql-docs-1.5.pdf">v1.5</a></li>
+                <li><a href="/p-mysql/mysql-docs-1.4.pdf">v1.4</a></li>
               </ul>
             </div>
           </div>
