set table widths for cf-help.html

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -778,7 +778,7 @@ category: basics
 }
 
 // CF CLI Help
-.pivotalcf_devguide_cf-cli_cf-help table tr td:first-child,
-.devguide_cf-cli_cf-help table tr td:first-child {
+.pivotalcf_cf-cli_cf-help table tr td:first-child,
+.cf-cli_cf-help table tr td:first-child {
   width: 44%;
 }
