update styles for cf-help docs
- update classnames to reflect change in repo structure
- adds rules on separator rows

[#114051085]

Signed-off-by: Christa Hartsock <chartsock@pivotal.io>

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -782,3 +782,7 @@ category: basics
 .cf-cli_cf-help table tr td:first-child {
   width: 44%;
 }
+.pivotalcf_cf-cli_cf-help table, .pivotalcf_cf-cli_cf-help table tr.separator, .pivotalcf_cf-cli_cf-help table tr.separator td,
+.cf-cli_cf-help table, .cf-cli_cf-help table tr.separator, .cf-cli_cf-help table tr.separator td {
+  border: none;
+}
