--- a/source/subnavs/subnav_template.erb
+++ b/source/subnavs/subnav_template.erb
@@ -2,6 +2,6 @@
   <a class="sidenav-title">
     Doc Index
   </a>
-  <div class="nav-content">
+  <div class="nav-content deepnav-content">
   </div>
 </div>
