--- a/source/Gemfile-docker/creating-account.html.md.erb
+++ b/source/Gemfile-docker/creating-account.html.md.erb
@@ -11,13 +11,13 @@
         <div class="menu-content js-menu-content" aria-hidden="true">
           <ul>
             <li class="menu-link">
-              <a href="/pivotalcf/getstarted/pcf-docs.html">
+              <a href="/pivotalcf/installing/pcf-docs.html">
                 Pivotal CF Docs Home
               </a>
             </li>
             <li class="menu-link">
-              <a href="/pivotalcf/getstarted/index.html">
-                Getting Started with Pivotal CF
+              <a href="/pivotalcf/installing/index.html">
+                Installing PCF Guide
               </a>
             </li>
           </ul>
