--- a/source/Gemfile-docker/example_deepnav.erb
+++ b/source/Gemfile-docker/example_deepnav.erb
@@ -4,8 +4,8 @@
 </a>
 <div class="nav-content">
   <ul class="menu">
-    <li><span class="topic"><a href="/pivotalcf/getstarted/pcf-docs.html">Pivotal CF Docs Home</a></span></li>
-    <li><span class="topic"><a href="/pivotalcf/getstarted/index.html">Getting Started with Pivotal CF</a></span></li>
+    <li><span class="topic"><a href="/pivotalcf/installing/pcf-docs.html">Pivotal CF Docs Home</a></span></li>
+    <li><span class="topic"><a href="/pivotalcf/installing/index.html">Installing PCF Guide</a></span></li>
     <li>
       <span class="hasSubMenuClosed" data-behavior="HasSubMenu"><a href="/pivotalcf/customizing/index.html">Using Ops Manager</a></span>
       <ul>
