--- a/source/subnavs/example_deepnav.erb
+++ b/source/subnavs/example_deepnav.erb
@@ -4,8 +4,8 @@
 </a>
 <div class="nav-content">
   <ul class="menu">
-    <li><span class="topic"><a href="/pivotalcf/getstarted/pcf-docs.html">Pivotal Cloud Foundry&reg; Docs Home</a></span></li>
-    <li><span class="topic"><a href="/pivotalcf/getstarted/index.html">Getting Started with Pivotal Cloud Foundry&reg;</a></span></li>
+    <li><span class="topic"><a href="/pivotalcf/isntalling/pcf-docs.html">Pivotal Cloud Foundry&reg; (PCF) Docs Home</a></span></li>
+    <li><span class="topic"><a href="/pivotalcf/isntalling/index.html">Installing PCF Guide</a></span></li>
     <li>
       <span class="hasSubMenuClosed" data-behavior="HasSubMenu"><a href="/pivotalcf/customizing/index.html">Using Ops Manager</a></span>
       <ul>
