[#112342461] - update push service docs sidebar

--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -7,10 +7,33 @@
           <ul>
             <li class="menu-link"><a href="/push/">Overview</a></li>
             <li class="menu-link"><a href="/push/installation.html">Installation</a></li>
-            <li class="menu-link"><a href="/push/dashboard-user-guide.html">Dashboard User Guide</a></li>
-            <li class="menu-link"><a href="/push/development-guide.html">Development Guide</a></li>
             <li class="menu-link"><a href="/push/devops.html">DevOps Guide</a></li>
             <li class="menu-link"><a href="/push/release-notes.html">Release Notes</a></li>
+            <li class="menu-link">
+              <a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a>
+            </li>
+            
+            <li>
+              <div class="menu-subtitle js-menu-subtitle">Development Guide</div>
+              <ul>
+                <li class="menu-link"><a href="/push/v1_4_0/first-push-walkthrough/">First Push Walkthrough</a></li>
+                <li class="menu-link"><a href="/push/v1_4_0/geofence-walkthrough/">First Geofence Walkthrough</a></li>
+                <li class="menu-link"><a href="/push/ios/">iOS</a></li>
+                <li class="menu-link"><a href="/push/android/">Android</a></li>
+                <li class="menu-link"><a href="/push/windowsphone81/">Windows Phone 8.1</a></li>
+                <li>
+                  <div class="menu-subtitle menu-js-subtitle">APIs</div>
+                  <ul>
+                    <li><a href="/push/v1_4_0/api/push/">Push API</a></li>
+                    <li><a href="/push/v1_4_0/api/registration/">Registration API</a></li>
+                    <li><a href="/push/v1_4_0/api/tags/">Tags API</a></li>
+                    <li><a href="/push/v1_4_0/api/schedules/">Schedules API</a></li>
+                    <li><a href="/push/v1_4_0/api/geofences/">Geofences API</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+
           </ul>
         </div>
       </li>
