--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -4,11 +4,11 @@
 .header-layout {
   @media (min-width: $bp-wide) {
     left: 0;
-    padding-left: em(30);
     padding-right: em(30);
     position: fixed;
     top: 0;
     width: 100%;
+    height: 64px;
     z-index: 11;
   }
 }
@@ -45,21 +45,34 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
 */
 .header {
   background: $color-bg-header;
-  border-bottom: 3px solid $color-accent-bright;
   color: #fefefe;
   min-height: em(38);
-  padding: em(5) 1em em(5) 1em;
   @include clearfix;
 }
 .header a {
   color: #fff;
   display: inline-block;
+  border: none;
+  margin-bottom: -26px;
+  padding-left: 10px;
 }
 .header img {
-  height: 1;
   margin-right: 0.5em;
-  width: 25px;
+  width: 64px;
   vertical-align: top;
+}
+
+.header-spacer {
+  height: 125px;
+}
+
+.pivotal-logo {
+  background-image: url(../../images/icon-p-green.jpg);
+  background-repeat: no-repeat;
+  background-position: center left;
+  background-size: 100%;
+  height: 64px;
+  width: 64px;
 }
 
 // logo
@@ -111,14 +124,14 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
 .header-item {
   clear: both;
   display: none;
-  font-weight: bold;
   @include transition (opacity);
   @extend %h-xs;
   line-height: 1;
+  font-size: 16px;
   @media (min-width: $bp-wide) {
     clear: none;
     display: inline-block;
-    padding-top: 0.55em;
+    padding-top: 22px;
   }
 }
 .menu-active .header-item {
@@ -126,16 +139,7 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
     display: block;
   }
 }
-.header-item:after {
-  @media (min-width: $bp-wide) {
-    content: "|";
-  }
-}
-.header-item:last-child:after {
-  @media (min-width: $bp-wide) {
-    content: "";
-  }
-}
+
 
 /*doc
 ---
@@ -158,9 +162,6 @@ category: basics
 ```
 */
 .header-item a {
-  border-bottom-color: $gray2;
-  border-style: dotted;
-  border-width: 0 0 1px;
   color: #fff;
   display: block;
   padding: 0.5em 0;
