Change Pivotal image link to absolute remote path
Signed-off-by: Greg Chattin-McNichols <gchattinmcnichols@pivotal.io>

--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -67,7 +67,7 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
 }
 
 .pivotal-logo {
-  background-image: url(../../images/icon-p-green.jpg);
+  background-image: url(http://docs.pivotal.io/images/icon-p-green.jpg);
   background-repeat: no-repeat;
   background-position: center left;
   background-size: 100%;
