--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -20,6 +20,7 @@
 @import "partials/_syntax-highlight.scss";
 @import "partials/_3rdparty.scss";
 @import "partials/_header.scss";
+@import "partials/_global-header.scss";
 @import "partials/_footer.scss";
 @import "partials/_sidenav.scss";
 
