--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -21,6 +21,7 @@
 @import "partials/_3rdparty.scss";
 @import "partials/_header.scss";
 @import "partials/_global-header.scss";
+@import "partials/local-header.scss";
 @import "partials/_footer.scss";
 @import "partials/_sidenav.scss";
 
