--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -223,25 +223,9 @@
               </div>
               <div class="local-header local-title clearfix">
                 <img src="<%= vars.local_header_img %>">
-                <span class="local-header-title"><%= vars.local_header_title %>
-                </span>
-                <span class="local-header local-version header-dropdown">
-                  <a class="local-header header-dropdown-link">v<%= vars.latest_stable_version %></a>
-                  <span class="local-header header-dropdown-content">
-                    <ul>
-                      <li><a href="/archives/pcf-docs-1.6.pdf">v1.6.0.0</a></li>
-                      <li><a href="/archives/pcf-docs-1.5.pdf">v1.5.0.0</a></li>
-                      <li><a href="/archives/pcf-docs-1.4.pdf">v1.4.0.0</a></li>
-                      <li><a href="/archives/pcf-docs-1.3.pdf">v1.3.0.0</a></li>
-                      <li><a href="/archives/pcf-docs-1.2.pdf">v1.2.0.0</a></li>
-                    </ul>
-                  </span>
-                </span>
-
-                <span class="local-header local-search"><a class="search-icon" id="local-header-search" data-behavior="Search">
-                  &nbsp;Search PCF <%= vars.latest_stable_version %>
-                </a>
-                </span>
+                <span class="local-header-title"><%= vars.local_header_title %></span>
+                <span class="local-header local-version"><%= vars.latest_stable_version %></span>
+                <span class="local-header local-search">Search</span>
               </div>
               <div class="local-header local-header-links">
                 <% vars.local_header_links.each do |link| %>
